--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "expo": "^53.0.8",
     "expo-constants": "~17.1.6",
+    "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.6",
     "expo-secure-store": "^14.2.3",
@@ -20,12 +21,13 @@
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "zustand": "^5.0.4",
-    "expo-linear-gradient": "~14.1.4"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
