--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "zustand": "^5.0.4"
+    "zustand": "^5.0.4",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
