--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
+    "expo-location": "~18.1.5",
     "expo-router": "~5.0.6",
     "expo-secure-store": "^14.2.3",
     "expo-status-bar": "~2.2.3",
@@ -23,15 +24,14 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-element-dropdown": "^2.12.4",
+    "react-native-maps": "1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "zustand": "^5.0.4",
-    "react-native-maps": "1.20.1",
-    "expo-location": "~18.1.5"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
